# microsoft-ui-reactor

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Duct.sln  Patch.sln  README.md  Reactor.sln  Reactor.slnx  SKILL.md  TESTING.md  ThirdPartyNoticeText.txt  bootstrap.ps1  coverage.settings.xml  es-metadata.yml  mkdocs.yml  nuget.config  owners.txt
.claude/: settings.local.json
.config/: tsaoptions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Duct.Analyzers/: AnalyzerReleases.Unshipped.md  Duct.Analyzers.csproj  RequestedThemeSetAnalyzer.cs  RequestedThemeSetCodeFix.cs  UseLightweightStylingAnalyzer.cs  UseThemeRefAnalyzer.cs  UseThemeRefCodeFix.cs
Duct.Cli/: BOOTSTRAP-SKILL.md  Duct.Cli.csproj  Program.cs
Duct.Interop.WinForms/: Duct.Interop.WinForms.csproj  WinFormsHostElement.cs  XamlIslandBootstrap.cs  XamlIslandControl.cs
Duct.Localization.Generator/: LocSourceGenerator.cs
Duct.MiniTest/: Duct.MiniTest.csproj  Program.cs
Duct.Preview/: Duct.Preview.csproj  PreviewEngine.cs  PreviewLoadContext.cs  Program.cs
Duct.TestApp/: App.cs  Duct.TestApp.csproj  SelfTestRunner.cs
Duct.Tests/: BrushHelperTests.cs  ChildReconcilerIntegrationTests.cs  ChildReconcilerTests.cs  ComponentPropsTests.cs  DiffTreesReconcilerTests.cs  Duct.Tests.csproj  DuctHostControlTests.cs  DuctHostRenderLoopTests.cs  ElementPoolTests.cs  ElementTests.cs  (+15 more)
Duct/Native/differ/: Cargo.toml
Duct/Native/differ/src/: context.rs  diff.rs  ffi.rs  lib.rs  logging.rs  reconcile.rs  tests.rs  types.rs
(+2964 files in other folders)
