[package]
# Named "viewdiffer" (not "patch_differ") to avoid Windows PCA heuristic
# that forces UAC elevation for executables with "patch" in the name.
name = "viewdiffer"
version = "0.1.0"
edition = "2021"
description = "Native view diffing engine for Duct"

[lib]
name = "viewdiffer"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
panic = "abort"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
cast_lossless = "allow"
too_many_arguments = "allow"
wildcard_imports = "allow"
